# CITest

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: math_utils.cpp
tests/: test_math.cpp
